syntax = "proto3";

package protos;

import "google/protobuf/timestamp.proto";
import "google/protobuf/any.proto";

option java_multiple_files = true;

// Basic Request
message BasicClientRequest {
    int32 code = 1;
    google.protobuf.Any data = 2;
    string message = 3;
}

// Basic Response
message BasicServerResponse {
    int32 code = 1;
    google.protobuf.Any data = 2;
    string message = 3;
}

/* [USER] */
// user service
service UserService {
    rpc Register (BasicClientRequest) returns (BasicServerResponse) {
    }
    rpc Login (BasicClientRequest) returns (BasicServerResponse) {
    }
}

enum CodeType {
    REGISTER = 0;
    LOGIN = 1;
}
enum Role {
    DEFAULT = 0;
    ADMIN = 10;
    SUPER_ADMIN = 99;
}
enum Sex {
    MALE = 0;
    FEMALE = 1;
}
enum Status {
    ACTIVE = 0;
    INACTIVE = 1;
}
message UserProfile {
    string telephone = 1;
    string email = 2;
    string username = 3;
    string nickname = 4;
    string avatar = 5;
    string signature = 6;
    Sex sex = 7;
    google.protobuf.Timestamp birthday = 8;
    string location = 9;
}
message UserReq {
    CodeType codeType = 1;
    string verificationCode = 2;
    UserProfile userProfile = 3;
    string password = 4;
    string deviceID = 5;

    google.protobuf.Timestamp createdAt = 6;

    google.protobuf.Any extension = 7;
}

message UserResp {
}

/* [SMS CODE] */
service SMSService {
    rpc ObtainSMSCode (BasicClientRequest) returns (BasicServerResponse) {
    }
}

message SMSReq {
    CodeType codeType = 1;
    string telephone = 2;
    google.protobuf.Any extension = 3;
}

message SMSResp {
}
